--- a/deploy/kubernetes/chart/templates/fileServer/deployment.yaml
+++ b/deploy/kubernetes/chart/templates/fileServer/deployment.yaml
@@ -23,6 +23,26 @@ spec:
       {{- with .Values.data.podSecurityContext }}
       securityContext: {{ toYaml . | nindent 8 }}
       {{- end }}
+      initContainers:
+        # Create a named pipe for the access log
+        # This allows us to separate the access log from the error log, so that it is tagged differently when forwarded
+        # This makes processing the access log for statistics easier
+        - name: make-log-pipes
+          {{ include "esgf.deployment.image" (list . $fileServer.image) }}
+          args:
+            # Continue to send the error log to stderr, but send the access log to a named pipe
+            - bash
+            - -c
+            - |
+              set -ex
+              ln -s /dev/stderr /var/log/nginx/error.log
+              mkfifo /var/log/nginx/access.log
+          {{- with .Values.data.securityContext }}
+          securityContext: {{ toYaml . | nindent 12 }}
+          {{- end }}
+          volumeMounts:
+            - name: nginx-logs
+              mountPath: /var/log/nginx
       containers:
         - name: file-server
           {{ include "esgf.deployment.image" (list . $fileServer.image) }}
@@ -50,7 +70,22 @@ spec:
             - name: nginx-conf
               mountPath: /etc/nginx/conf.d
               readOnly: true
+            - name: nginx-logs
+              mountPath: /var/log/nginx
             {{- include "esgf.data.volumeMounts" . | nindent 12 }}
+        # Tail the access log separately
+        - name: file-server-access-log
+          {{ include "esgf.deployment.image" (list . $fileServer.image) }}
+          args:
+            # Just cat the access log
+            - cat
+            - /var/log/nginx/access.log
+          {{- with .Values.data.securityContext }}
+          securityContext: {{ toYaml . | nindent 12 }}
+          {{- end }}
+          volumeMounts:
+            - name: nginx-logs
+              mountPath: /var/log/nginx
       {{- with $fileServer.nodeSelector }}
       nodeSelector: {{ toYaml . | nindent 8 }}
       {{- end }}
@@ -64,5 +99,8 @@ spec:
         - name: nginx-conf
           configMap:
             name: {{ include "esgf.component.fullname" (list . "fileServer") }}
+        # Each pod gets a directory to hold the named pipes for the logs
+        - name: nginx-logs
+          emptyDir: {}
         {{- include "esgf.data.volumes" . | nindent 8 }}
 {{- end -}}
