Add resource-specific labels

--- a/deploy/kubernetes/chart/templates/fileServer/deployment.yaml
+++ b/deploy/kubernetes/chart/templates/fileServer/deployment.yaml
@@ -1,10 +1,10 @@
-{{- if .Values.data.fileServer.enabled -}}
 {{- $fileServer := .Values.data.fileServer -}}
+{{- if $fileServer.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "esgf.component.fullname" (list . "fileServer") }}
-  labels: {{ include "esgf.component.labels" (list . "fileServer") | nindent 4 }}
+  labels: {{ include "esgf.component.labels" (list . "fileServer" $fileServer.labels) | nindent 4 }}
 spec:
   {{- if not $fileServer.hpa }}
   replicas: {{ $fileServer.replicaCount }}
