--- a/deploy/kubernetes/chart/templates/thredds/configmap.yaml
+++ b/deploy/kubernetes/chart/templates/thredds/configmap.yaml
@@ -1,9 +1,10 @@
-{{- if (and .Values.data.thredds.enabled (not .Values.data.thredds.catalogVolume))  -}}
+{{- $thredds := .Values.data.thredds -}}
+{{- if (and $thredds.enabled (not $thredds.catalogVolume))  -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "esgf.component.fullname" (list . "thredds") }}
-  labels: {{ include "esgf.component.labels" (list . "thredds") | nindent 4 }}
+  labels: {{ include "esgf.component.labels" (list . "thredds" $thredds.labels) | nindent 4 }}
 data:
   catalog.xml: {{ tpl (.Files.Get "files/thredds/catalog.xml") . | quote }}
 {{- end -}}
