--- a/deploy/kubernetes/chart/templates/fileServer/configmap.yaml
+++ b/deploy/kubernetes/chart/templates/fileServer/configmap.yaml
@@ -1,9 +1,10 @@
-{{- if .Values.data.fileServer.enabled -}}
+{{- $fileServer := .Values.data.fileServer -}}
+{{- if $fileServer.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "esgf.component.fullname" (list . "fileServer") }}
-  labels: {{ include "esgf.component.labels" (list . "fileServer") | nindent 4 }}
+  labels: {{ include "esgf.component.labels" (list . "fileServer" $fileServer.labels) | nindent 4 }}
 data:
   datasets.conf: {{ tpl (.Files.Get "files/fileServer/datasets.conf") . | quote }}
 {{- end -}}
