--- a/deploy/kubernetes/chart/templates/fileServer/hpa.yaml
+++ b/deploy/kubernetes/chart/templates/fileServer/hpa.yaml
@@ -4,7 +4,7 @@ apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "esgf.component.fullname" (list . "fileServer") }}
-  labels: {{ include "esgf.component.labels" (list . "fileServer") | nindent 4 }}
+  labels: {{ include "esgf.component.labels" (list . "fileServer" $fileServer.labels) | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
