Prevent the double running of pipelines when there is an open GitHub PR

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,12 +64,15 @@ variables:
     # Push all tags
     - docker push $REPOSITORY
   only:
-    # Only run build jobs for branches in the repo, not PRs
+    # Only run build jobs for branches in the repo, not MRs
     refs:
       - branches
     # Only run build jobs if there is a change to the images
     changes:
       - images/**/*
+  except:
+    # Exclude any branches that correspond to external PRs
+    - external_pull_requests
 
 build:base:
   extends: .docker-build
