Add a single flag to disable the data node

--- a/deploy/kubernetes/chart/templates/fileServer/configmap.yaml
+++ b/deploy/kubernetes/chart/templates/fileServer/configmap.yaml
@@ -1,5 +1,5 @@
 {{- $fileServer := .Values.data.fileServer -}}
-{{- if $fileServer.enabled -}}
+{{- if (and .Values.data.enabled $fileServer.enabled) -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
