--- a/deploy/kubernetes/chart/templates/ingress/ingress.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress.yaml
@@ -19,6 +19,7 @@ spec:
     - host: {{ .Values.hostname | quote }}
       http:
         paths:
+          {{- if .Values.data.enabled }}
           {{- if .Values.data.thredds.enabled }}
           - path: /thredds
             backend:
@@ -30,4 +31,5 @@ spec:
             backend:
               serviceName: {{ include "esgf.component.fullname" (list . "fileServer") }}
               servicePort: 8080
+          {{- end }}
           {{- end }}
