--- a/deploy/kubernetes/chart/values.yaml
+++ b/deploy/kubernetes/chart/values.yaml
@@ -50,17 +50,14 @@ data:
   # Indicates if the data node is to be enabled
   enabled: true
 
-  # The mounts that are required to serve data, as defined by the given datasets
+  # List of mounts required to serve data, as defined by the given datasets
   #
-  # Each specified mount should include at least the following keys:
+  # Each specified mount should include the following keys:
   #
   #   mountPath: The path to mount the volume inside the container
   #   volumeSpec: A Kubernetes volume specification - see https://kubernetes.io/docs/concepts/storage/volumes/
-  #
-  # The following keys are optional:
-  #
-  #   mountOptions: Additional options for the mount, e.g. mountPropagation for hostPath volumes
-  #   name: The name for the volume - if not given, this is derived from the mount path
+  #   mountOptions (optional): Additional options for the mount, e.g. mountPropagation for hostPath volumes
+  #   name (optional): The name for the volume - if not given, this is derived from the mount path
   mounts: []
     # - name: datacentre   # This is actually the derived name that would be used anyway
     #   mountPath: /datacentre
@@ -70,7 +67,8 @@ data:
     #   mountOptions:
     #     mountPropagation: HostToContainer
 
-  # The datasets to expose - for each dataset, a THREDDS datasetScan element and an Nginx location are generated
+  # List of datasets to expose
+  # For each dataset, a THREDDS datasetScan element and an Nginx location are generated
   #
   # Each specified dataset should have the following keys:
   #
@@ -199,3 +197,60 @@ data:
     # The tolerations for the file server pod
     # See https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
     tolerations:
+
+
+###
+# Index node configuration
+###
+index:
+  # Indicates if any index node components are to be enabled
+  enabled: true
+
+  # Configuration for Solr
+  solr:
+    # Image overrides for the Solr image
+    image:
+      repository: solr
+      pullPolicy: Always
+    # The pod security context for all Solr pods
+    # This should normally not need to change unless Solr pods are configured to use
+    # specific paths on the host for core storage
+    podSecurityContext:
+      runAsUser: 1000
+      runAsGroup: 1000
+      fsGroup: 1000
+    # The container security context for all Solr containers
+    securityContext:
+      # Run with a read-only root filesystem by default
+      readOnlyRootFilesystem: true
+    # The default resource allocations for all Solr containers
+    # Can be overridden on a per-shard basis
+    # See https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+    resources: {}
+    # Additional labels for all Solr resources
+    labels: {}
+    # The node selector for Solr pods
+    # See https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
+    nodeSelector:
+    # The affinity rules for Solr pods
+    # See https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
+    affinity:
+    # The tolerations for the Solr pods
+    # See https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
+    tolerations:
+
+    # The default replica poll interval (default one hour)
+    replicaPollInterval: "01:00:00"
+
+    # List of replicas of external Solr instances to replicate
+    #
+    # Each specified replica should contain the following keys:
+    #
+    #   name: The name to use in resources created for the replica
+    #   masterUrl: The URL of the Solr index to replicate, including scheme and path components
+    #   pollInterval (optional): Replica-specific poll interval
+    #   resources (optional): Replica-specific resource allocations
+    replicas: []
+      # - name: remote-site
+      #   masterUrl: https://remote.esgf.node/solr
+      #   pollInterval: "06:00:00"
