Add master and slave deployments

--- a/deploy/kubernetes/chart/templates/ingress/ingress.yaml
+++ b/deploy/kubernetes/chart/templates/ingress/ingress.yaml
@@ -33,3 +33,17 @@ spec:
               servicePort: 8080
           {{- end }}
           {{- end }}
+          {{- if .Values.index.enabled }}
+          # We only want to permit access to the replication handler for each core from outside
+          # However wildcard paths are not supported on all ingress controllers
+          # So we make a path definition for each core
+          - path: /solr/aggregations/replication
+            backend: &solr
+              # We point to the Solr slave
+              serviceName: {{ include "esgf.component.fullname" (list . "solr" "slave") }}
+              servicePort: 8983
+          - path: /solr/datasets/replication
+            backend: *solr
+          - path: /solr/files/replication
+            backend: *solr
+          {{- end }}
