Allow for local Solr installation to be disabled

--- a/deploy/kubernetes/chart/templates/solr/master-deployment.yaml
+++ b/deploy/kubernetes/chart/templates/solr/master-deployment.yaml
@@ -1,5 +1,5 @@
-{{- if .Values.index.enabled -}}
 {{- $solr := .Values.index.solr -}}
+{{- if and .Values.index.enabled $solr.localEnabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
