--- a/deploy/kubernetes/chart/templates/solr/slave-service.yaml
+++ b/deploy/kubernetes/chart/templates/solr/slave-service.yaml
@@ -1,5 +1,5 @@
-{{- if .Values.index.enabled -}}
 {{- $solr := .Values.index.solr -}}
+{{- if and .Values.index.enabled $solr.localEnabled -}}
 apiVersion: v1
 kind: Service
 metadata:
